--- a/German_Credit_Risk.Rmd
+++ b/German_Credit_Risk.Rmd
@@ -204,10 +204,11 @@ Define values for each category
 
 ```{r}
 checking_status_mapping <- c(
-  "<0" = 1, 
-  "0<=X<200" = 2, 
-  ">=200" = 3, 
-  "no checking" = 4)
+  "no checking" = 1,
+  "<0" = 2, 
+  "0<=X<200" = 3, 
+  ">=200" = 4 
+  )
 
 employment_mapping <- c(
   "unemployed" = 1, 
@@ -279,13 +280,14 @@ For the remaining columns we apply one-hot encodig
 df_categorical <- df[, chr_columns_help]
 print_unique_values(df_categorical)
 ```
+We use dummy_cols function from fastDummies library
 
 ```{r}
 df <- dummy_cols(
   df, 
   select_columns = chr_columns_help, 
-  remove_first_dummy = TRUE, 
-  remove_selected_columns = TRUE)
+  remove_first_dummy = TRUE,           # remove the first dummy to avoid the issue of multicollinearity
+  remove_selected_columns = TRUE)     # remove the original columns
 ```
 
 ### Summary of data cleaning
