--- a/German_Credit_Risk.Rmd
+++ b/German_Credit_Risk.Rmd
@@ -212,8 +212,8 @@ Because of that we decide to join these two groups.
 
 ```{r, message=FALSE}
 df %>%
-group_by(job, class) %>%
-summarise(count = n())
+dplyr::group_by(job, class) %>%
+dplyr::summarise(count = n())
 ```
 
 
@@ -349,7 +349,7 @@ str(df)
 
 ### Splitting the dataset
 
-Before performing Exploratory Data Analysis we should divide our dataset into train and test, we do it as below:
+Before performing Exploratory Data Analysis we should divide our dataset into train and test, we do it as below. Furthermore, we remove the ID column (first column) since it will not be used in the further analysis.
 
 ```{r}
 set.seed(123456789)
@@ -358,9 +358,46 @@ training_obs <- createDataPartition(df$id,
                                     list = FALSE) 
 df.train <- df[training_obs,]
 df.test  <- df[-training_obs,]
+
+df <- df[, -1]
+df.train <- df.train[, -1]
+df.test <- df.test[, -1]
 ```
 
+Let's check the dataframe
+
 ```{r, echo=FALSE}
+datatable(df, options = list(
+  searching = FALSE,
+  pageLength = 5,
+  lengthMenu = c(5, 10, 15, 20),
+  scrollX = TRUE
+), width = "100%")  # Adjust the width as needed
+```
+
+Before writing the dfs let's change the order of columns, so the target variable (class) would be in the first column.
+
+```{r}
+# Move "class" from 3rd to the first position
+df <- df[, c(3, 1:2, 4:ncol(df))]
+df.train <- df.train[, c(3, 1:2, 4:ncol(df.train))]
+df.test <- df.test[, c(3, 1:2, 4:ncol(df.train))]
+```
+
+Last check of the dataset before saving
+
+```{r, echo=FALSE}
+datatable(df.train, options = list(
+  searching = FALSE,
+  pageLength = 5,
+  lengthMenu = c(5, 10, 15, 20),
+  scrollX = TRUE
+), width = "100%")  # Adjust the width as needed
+```
+
+Write dataframes
+
+```{r}
 # remove unecessary variables
 rm(list = setdiff(ls(), c("df", "df.test", "df.train", "print_unique_values")))
 
@@ -372,7 +409,9 @@ write.csv(df, "./data/output/df.csv", row.names = FALSE)
 
 ## Exploratory Data Analysis
 
-Divide variables
+The EDA will be performed on training dataframe.
+
+Divide variables according to their type
 
 ```{r, max.height='150px'}
 # define numeric variables
@@ -386,7 +425,7 @@ numeric_variables <- c("age",
                        "num_dependents",
                        "residence_since")
 
-# define feat variables
+# define feat variables - some "mysterious" variables prepared by our lecturer
 feat_variables <- c()
 for (i in 1:10){
   if (i < 10){
@@ -401,25 +440,186 @@ for (i in 1:10){
 ordered_categorical = c("checking_status", "employment", "job", "savings_status")
 
 # define boolean variables
-boolean_variables <- setdiff(colnames(df.train), c("id", numeric_variables, feat_variables, ordered_categorical))
+boolean_variables <- setdiff(colnames(df.train), c(numeric_variables, feat_variables, ordered_categorical))
 
 # check if the division was made properly
-print_unique_values(df[,boolean_variables])
+print_unique_values(df.train[,boolean_variables])
 ```
 
-Make histograms of numeric variables
+### Histograms of numeric variables
 
 ```{r}
 par(mfrow=c(3, 4))
 
 for (var in numeric_variables) {
-    hist(df[[var]], main=paste("Histogram of", var), xlab=var)
+    hist(df.train[[var]], main=paste("Histogram of", var), xlab=var)
 }
 ```
 
+### Histograms of feat variables
 ```{r}
+par(mfrow=c(3, 4))
+
+for (var in feat_variables) {
+    hist(df.train[[var]], main=paste("Histogram of", var), xlab=var)
+}
+```
+
+### Correlation matrix
+
+For numeric variables and target variable.
+
+```{r, message=FALSE}
+library(corrplot)
+```
+
+```{r}
+num_var <- c(numeric_variables, feat_variables, "class")
+numeric_df <- df.train[, num_var]
+cor_matrix <- cor(numeric_df, use="complete.obs")
+corrplot(cor_matrix, method="circle")
+```
+
+### Barplots of categorical variables
+
+```{r}
+# For ordered categorical variables
+par(mfrow=c(2, 2))
+for (var in ordered_categorical) {
+  counts <- table(df.train[[var]])
+  barplot(counts, main=paste("Bar Plot of", var), xlab=var, ylab="Count")
+}
+```
+
+### Boolean variables
+
+In case of boolean variables we create table with distribution of every variable.
+
+```{r, max.height='150px'}
+# Creating a summary table for boolean variables with percentages
+boolean_summary <- sapply(df.train[, boolean_variables], function(x) {
+  tab <- table(factor(x, levels = c(0, 1)))
+  pct <- 100 * tab / sum(tab) # Convert counts to percentage
+  return(pct)
+})
+
+boolean_summary <- t(boolean_summary) # Transposing to have variables as rows and percentage columns
+
+# Formatting the table for better readability
+boolean_summary <- round(boolean_summary, 1) # Round to two decimal places
+
+# Printing the summary table
+print(boolean_summary)
+```
+
+### The distribution of target variable
+
+As we can see below, the train and test dataframes are split proportionally, however we can observe unequal distribution - there are more than twice observations with class "1" (good).
+
+```{r}
+# Target variable distribution in df:
+round(table(df$class)/length(df$class), 3)
+```
+
+```{r}
+# Target variabledistribution in df.train:
+round(table(df.train$class)/length(df.train$class), 3)
+```
+
+```{r}
+# Target variabledistribution in df.test:
+round(table(df.test$class)/length(df.test$class), 3)
+```
+
+## Feature selection with RFE
+
+### Intro to RFE
+
+Recursive Feature Elimination (RFE) is a feature selection method used to identify and select a subset of relevant features for model building. The method works by recursively removing features, building a model with the remaining features, and calculating model accuracy. The least important features are removed in each iteration until the specified number of features is reached.
+
+In this section of the project, we employ RFE to optimize the feature set for predicting the class variable in our dataset. The process is outlined as follows.
+
+First of all we clear the environment, load train and test df and new libraries.
+
+```{r, message=FALSE}
+rm(list=ls())
+library(mlbench)
+library(caret)
+library(recipes)
+library(doParallel)
+```
+
+```{r}
+df.train <- read.csv("./data/output/df.train.csv")
+df.test <- read.csv("./data/output/df.test.csv")
+
+# rfe requires factor as target variable, so we modify class (3rd column) - only on df.train dataframe as of now
+df.train[, 1] <- as.factor(df.train[,1])
+```
+
+Detect the number of CPU cores available on the current machine and assign it to 'cores'. Then, register the detected number of cores for parallel processing using the doParallel package. This enables parallel execution of code to improve performance, especially for operations that can be executed concurrently.
+
+```{r}
+cores=detectCores()
+registerDoParallel(cores=cores)
+```
+
+### Define seeds for rfeControl
+
+If we use doParallel package and want to make our code reproducible we should pass seeds argument to rfeControl function it requires a list where each element corresponds to a specific resampling iteration's seed and the last element is a seed for the overall process.
+
+Assuming 10-fold CV, we need a list of 11 elements: 10 for each fold and 1 for the overall process.
+
+```{r}
+set.seed(123456789)
+numFolds <- 10
+seedsList <- lapply(1:numFolds, function(x) sample.int(1000, 49)) # Generate random seeds for each fold
+
+set.seed(123456789)
+seedsList[[length(seedsList) + 1]] <- sample.int(1000, 1) # Add one more seed for the overall process
+```
+
+
+```{r}
+## Define rfeControl object
+control <- rfeControl(functions=rfFuncs, method="cv", number=10, seeds = seedsList)
+```
+
+### Perform feature selection with rfe
+```{r}
+set.seed(123456789)
+results <- rfe(df.train[, seq(2, length(df.train), 1)],             # predictor variables 
+               df.train[, 1],                                       # target variable for prediction
+               sizes=c(1:49),                                       # the subset sizes to evaluate
+               rfeControl=control)
 
 ```
+
+Basing on the RFE method 35 variables have been chosen as the best predictors. Below we can see them.
+
+```{r, max.height='150px'}
+predictors(results)
+```
+Below we can see the plot of accuracy results vs number of variables included. Interesting is the fact that having more predictors than 35 not only does not increase precision but also worsens it.
+
+```{r}
+plot(results, type=c("g", "o"))
+```
+
+Assign the final columns to list and write as .csv.
+
+```{r}
+rfe_columns <- predictors(results)
+write.csv(rfe_columns, "./data/output/rfe_columns.csv")
+```
+
+
+
+
+
+
+
+
 
 
 
