--- a/German_Credit_Risk.Rmd
+++ b/German_Credit_Risk.Rmd
@@ -34,6 +34,7 @@ Classification problem
 
 The main goal of this paper is to apply ML methods, especially Decision Trees to the classify clients.
 
+First of all we will clear the data, then perform simple Exploratory Data Analysis. Later on we will choose the final features using RFE and we will move to building models: XGB, GBM and RF using the approach from classes (hypertuning parameters one by one) and then try to build models using tidymodels package and some general approach.
 
 ```{r, message=FALSE}
 library(tidyverse)
@@ -925,4 +926,544 @@ list(
   theme_bw() + coord_fixed() +
   scale_color_brewer(palette = "Paired")
 ```
+
+
+## GBM
+
+In this section we will perform GBM model.
+Let's start with clearing the environment and preparing df.
+
+```{r, message=FALSE}
+library(gbm)
+library(dplyr)
+library(caret)
+```
+
+
+```{r}
+rm(list=ls())
+
+df <- read.csv("./data/output/df.csv")
+df.train <- read.csv("./data/output/df.train.csv")
+df.test <- read.csv("./data/output/df.test.csv")
+```
+
+```{r}
+rfe_columns <- read.csv("./data/output/rfe_columns.csv")
+rfe_columns <- c("class", rfe_columns$x)
+
+df.train <- df.train[, rfe_columns]
+df.test <- df.test[, rfe_columns]
+```
+
+```{r}
+# Make factor
+df$class <- factor(df$class, levels = c(0, 1), labels = c("bad", "good"))
+df.train$class <- factor(df.train$class, levels = c(0, 1), labels = c("bad", "good"))
+df.test$class <- factor(df.test$class, levels = c(0, 1), labels = c("bad", "good"))
+```
+
+Function to define model formula
+
+```{r}
+# define model formula - all variables apart from class
+create_model_formula <- function(df, explained_variable){
+  
+  model_formula <- paste(explained_variable, "~")
+  
+  for (i in 2:length(colnames(df))){
+    if(i == 2){
+      model_formula <- paste(model_formula, colnames(df)[i])
+    } else {
+      model_formula <- paste(model_formula, " + ", colnames(df)[i])
+    }
+  }
+  
+  return(as.formula(model_formula))
+}
+```
+
+Define 2 model formulas - one for class (factor) and one for class_1 (number).
+
+```{r}
+model_formula01 <- create_model_formula(df.train, "class_1")
+model_formula <- create_model_formula(df.train, "class")
+```
+
+GBM requires target variable to be defined as 0 and 1, not factor so we do not change it. However we will also need variable "class" with factor.
+Define new variable - class_1 with 0 and 1.
+
+```{r}
+df.train$class_1 <- (df.train$class == "good") * 1
+df.test$class_1 <- (df.test$class == "good") * 1
+```
+
+
+### Simple GBM
+
+In this section we will build simple GBM modelm without any hyperparameter tuning.
+
+```{r}
+set.seed(123456789)
+gbm.1 <- 
+  gbm(model_formula01,
+      data = df.train,
+      distribution = "bernoulli",
+      # total number of trees
+      n.trees = 500,
+      # number of variable interactions - actually depth of the trees
+      interaction.depth = 4,
+      # shrinkage parameter - speed (pace) of learning
+      shrinkage = 0.01,
+      verbose = FALSE)
+
+gbm.1 %>% saveRDS("./data/output/gbm/gbm.1.rds")
+
+# predict train
+df.pred.train.gbm <- predict(gbm.1,
+                                  df.train, 
+                                  type = "response",
+                                  n.trees = 500)
+# predict test
+df.pred.test.gbm <- predict(gbm.1,
+                             df.test, 
+                             type = "response",
+                             n.trees = 500)
+```
+
+```{r, message=FALSE, warning=FALSE}
+# Load function to get accuracy and gini values
+source("./scripts/getAccuracyAndGini2.R")
+
+# Training set
+getAccuracyAndGini2(data = data.frame(class = df.train$class,
+                                      pred = df.pred.train.gbm),
+                    predicted_probs = "pred",
+                    target_variable = "class",
+                    target_levels = c("good", "bad"),
+                    predicted_class = "good")
+```
+
+```{r, warning=FALSE}
+# Test set
+getAccuracyAndGini2(data = data.frame(class = df.test$class,
+                                      pred = df.pred.test.gbm),
+                    predicted_probs = "pred",
+                    target_variable = "class",
+                    target_levels = c("good", "bad"),
+                    predicted_class = "good")
+```
+
+```{r, message=FALSE}
+ROC.train.gbm <- pROC::roc(df.train$class, 
+                           df.pred.train.gbm)
+
+ROC.test.gbm  <- pROC::roc(df.test$class, 
+                           df.pred.test.gbm)
+
+cat("AUC for train = ", pROC::auc(ROC.train.gbm), 
+    ", Gini for train = ", 2 * pROC::auc(ROC.train.gbm) - 1, "\n", sep = "")
+
+cat("AUC for test = ", pROC::auc(ROC.test.gbm), 
+    ", Gini for test = ", 2 * pROC::auc(ROC.test.gbm) - 1, "\n", sep = "")
+```
+
+Plot ROC
+
+```{r}
+list(
+  ROC.train.gbm = ROC.train.gbm,
+  ROC.test.gbm  = ROC.test.gbm
+) %>%
+  pROC::ggroc(alpha = 0.5, linetype = 1, size = 1) + 
+  geom_segment(aes(x = 1, xend = 0, y = 0, yend = 1), 
+               color = "grey", 
+               linetype = "dashed") +
+  labs(subtitle = paste0("Gini TRAIN: ",
+                         "gbm = ", 
+                         round(100 * (2 * auc(ROC.train.gbm) - 1), 1), "%, ",
+                         "Gini TEST: ",
+                         "gbm = ", 
+                         round(100 * (2 * auc(ROC.test.gbm) - 1), 1), "%, "
+  )) +
+  theme_bw() + coord_fixed() +
+  scale_color_brewer(palette = "Paired")
+```
+
+
+### Hyperparameter tuning
+
+```{r}
+parameters_gbm <- expand.grid(interaction.depth = c(1, 2, 4),
+                              n.trees = c(100, 300, 500),
+                              shrinkage = c(0.01, 0.1), 
+                              n.minobsinnode = c(150, 250, 400))
+
+ctrl_cv3 <- trainControl(method = "cv", 
+                         number = 10,
+                         classProbs = TRUE,
+                         summaryFunction = twoClassSummary)
+```
+
+```{r, max.height='150px', warning=FALSE}
+set.seed(123456789)
+gbm.2  <- train(model_formula,
+                       data = df.train,
+                       distribution = "bernoulli",
+                       method = "gbm",
+                       tuneGrid = parameters_gbm,
+                       trControl = ctrl_cv3,
+                       verbose = FALSE)
+
+gbm.2
+```
+
+
+```{r}
+res <- gbm.2$results
+
+saveRDS(object = gbm.2,
+        file   = "./data/output/gbm/gbm.2.rds")
+```
+
+```{r}
+# Predict train
+df.pred.train.gbm2 <- predict(gbm.2,
+                             df.train, 
+                             type = "prob",
+                             n.trees = 500)
+# Predict test
+df.pred.test.gbm2 <- predict(gbm.2,
+                            df.test, 
+                            type = "prob",
+                            n.trees = 500)
+```
+
+```{r, warning=FALSE}
+# Training set
+accuracy_gini_train <- getAccuracyAndGini2(data = data.frame(class = df.train$class,
+                                      pred = df.pred.train.gbm2[, "good"]),
+                    predicted_probs = "pred",
+                    target_variable = "class",
+                    target_levels = c("good", "bad"),
+                    predicted_class = "good")
+```
+
+```{r, warning=FALSE}
+# Test set
+accuracy_gini_test <- getAccuracyAndGini2(data = data.frame(class = df.test$class,
+                                      pred = df.pred.test.gbm2[, "good"]),
+                    predicted_probs = "pred",
+                    target_variable = "class",
+                    target_levels = c("good", "bad"),
+                    predicted_class = "good")
+```
+
+```{r}
+write.csv(accuracy_gini_test, "./data/accuracy_gini_test.csv")
+write.csv(accuracy_gini_train, "./data/accuracy_gini_train.csv")
+```
+
+```{r, message=FALSE}
+ROC.train.gbm2 <- pROC::roc(df.train$class, 
+                           df.pred.train.gbm2[, "good"])
+
+ROC.test.gbm2  <- pROC::roc(df.test$class, 
+                           df.pred.test.gbm2[, "good"])
+```
+
+```{r}
+cat("AUC for train = ", pROC::auc(ROC.train.gbm2), 
+    ", Gini for train = ", 2 * pROC::auc(ROC.train.gbm2) - 1, "\n", sep = "")
+
+cat("AUC for test = ", pROC::auc(ROC.test.gbm2), 
+    ", Gini for test = ", 2 * pROC::auc(ROC.test.gbm2) - 1, "\n", sep = "")
+```
+
+```{r}
+list(
+  ROC.train.gbm2 = ROC.train.gbm2,
+  ROC.test.gbm2  = ROC.test.gbm2
+) %>%
+  pROC::ggroc(alpha = 0.5, linetype = 1, size = 1) + 
+  geom_segment(aes(x = 1, xend = 0, y = 0, yend = 1), 
+               color = "grey", 
+               linetype = "dashed") +
+  labs(subtitle = paste0("Gini TRAIN: ",
+                         "gbm = ", 
+                         round(100 * (2 * auc(ROC.train.gbm2) - 1), 1), "%, ",
+                         "Gini TEST: ",
+                         "gbm = ", 
+                         round(100 * (2 * auc(ROC.test.gbm2) - 1), 1), "%, "
+  )) +
+  theme_bw() + coord_fixed() +
+  scale_color_brewer(palette = "Paired")
+```
+
+
+## Random Forest - one by one
+
+Let's start with cleaning the environment and loading the data.
+
+```{r}
+rm(list=ls())
+
+df <- read.csv("./data/output/df.csv")
+df.train <- read.csv("./data/output/df.train.csv")
+df.test <- read.csv("./data/output/df.test.csv")
+
+df.train$class <- factor(df.train$class, levels = c(0, 1), labels = c("bad", "good"))
+df.test$class <- factor(df.test$class, levels = c(0, 1), labels = c("bad", "good"))
+```
+
+Prepare df as before.
+
+```{r}
+rfe_columns <- read.csv("./data/output/rfe_columns.csv")
+rfe_columns <- c("class", rfe_columns$x)
+
+df.train <- df.train[, rfe_columns]
+df.test <- df.test[, rfe_columns]
+```
+
+### rf
+
+Estimate first - basic model with all variables and default parameters
+
+```{r, message=FALSE}
+library(randomForest)
+library(caret)
+library(pROC)
+library(dplyr)
+```
+
+```{r}
+set.seed(123456789)
+rf <- randomForest(class ~ ., 
+                   data = df.train)
+
+saveRDS(rf, file = "./data/output/rf/rf.RDS")
+```
+
+```{r}
+print(rf)
+```
+
+
+Estimated out-of-bag-error: 13.57%
+
+```{r}
+plot(rf)
+```
+
+The plot above helps determine the appropriate number of trees.
+
+The dark solid line presents the total OOB error, the red line presents the prediction error for "good" response, while the green line for "bad" response.
+
+As the number of trees is higher, the OOB error is smaller, and converges to approx. 120 trees.
+
+### rf2
+
+Hence, let us try to limit number of trees and estimate the model on bootstrap samples from the full data set.
+
+We also increase the number of predictors used from 5 to 10.
+
+```{r}
+set.seed(123456789)
+rf2 <- 
+  randomForest(class ~ .,
+               data = df.train,
+               ntree = 120,
+               sampsize = nrow(df.train),
+               mtry = 10,
+               # minimum number of obs in the terminal nodes
+               nodesize = 100,
+               # we also generate predictors importance measures,
+               importance = TRUE)
+
+saveRDS(rf2, file = "./data/output/rf/rf2.RDS")
+print(rf2)
+```
+
+### rf3 - cross validation
+
+Let us try to optimize the mtry parameter using the cross-validation process.
+
+We consider 35 predictors in the model formula. Hence, let us try mtry between 2 and 31.
+
+```{r, max.height='150px'}
+parameters_rf <- expand.grid(mtry = 2:31)
+ctrl_oob <- trainControl(method = "oob", classProbs = TRUE)
+
+set.seed(123456789)
+
+rf3 <-
+  train(class ~ .,
+        data = df.train,
+        method = "rf",
+        ntree = 120,
+        nodesize = 100,
+        tuneGrid = parameters_rf,
+        trControl = ctrl_oob,
+        importance = TRUE)
+
+rf3
+saveRDS(rf3, file = "./data/output/rf/rf3.RDS") 
+```
+
+```{r}
+plot(rf3$results$mtry,
+     rf3$results$Accuracy, type = "b")
+```
+
+```{r}
+plot(rf3$results$mtry,
+     rf3$results$Kappa, type = "b")
+```
+
+```{r}
+modelLookup("ranger")
+```
+
+### rf3a - grid search
+
+Let's apply grid search and try to optimize mtry and min.node.size parameters
+
+```{r}
+parameters_ranger <- 
+  expand.grid(mtry = 4:15,
+              # split rule
+              splitrule = "gini",
+              # minimum size of the terminal node
+              min.node.size = c(50, 100, 150))
+
+ctrl_cv5 <- trainControl(method = "cv", 
+                         number =    5,
+                         classProbs = T)
+
+set.seed(123456789)
+rf3a <- 
+  train(class ~ ., 
+        data = df.train, 
+        method = "ranger", 
+        num.trees = 120, # default = 500
+        # numbers of processor cores to use in computations
+        num.threads = 3,
+        # impurity measure
+        importance = "impurity",
+        # parameters
+        tuneGrid = parameters_ranger, 
+        trControl = ctrl_cv5)
+
+saveRDS(rf3a, file = "./data/output/rf/rf3a.RDS") 
+```
+
+```{r, max.height='150px'}
+rf3a
+```
+
+```{r}
+plot(rf3a)
+```
+
+
+In this case the omptimal value for mtry is 6.
+
+Let's compare all of the models.
+
+```{r, message=FALSE}
+pred.train.rf <- predict(rf, 
+                         df.train, 
+                         type = "prob")[, "good"]
+ROC.train.rf  <- roc(as.numeric(df.train$class == "good"), 
+                     pred.train.rf)
+
+
+pred.test.rf  <- predict(rf, 
+                         df.test, 
+                         type = "prob")[, "good"]
+ROC.test.rf   <- roc(as.numeric(df.test$class == "good"), 
+                     pred.test.rf)
+
+
+pred.train.rf2 <- predict(rf2, 
+                          df.train, 
+                          type = "prob")[, "good"]
+ROC.train.rf2  <- roc(as.numeric(df.train$class == "good"), 
+                      pred.train.rf2)
+
+
+pred.test.rf2  <- predict(rf2, 
+                          df.test, 
+                          type = "prob")[, "good"]
+ROC.test.rf2   <- roc(as.numeric(df.test$class == "good"), 
+                      pred.test.rf2)
+
+
+pred.train.rf3 <- predict(rf3, 
+                          df.train, 
+                          type = "prob")[, "good"]
+ROC.train.rf3  <- roc(as.numeric(df.train$class == "good"), 
+                      pred.train.rf3)
+
+
+pred.test.rf3  <- predict(rf3, 
+                          df.test, 
+                          type = "prob")[, "good"]
+ROC.test.rf3   <- roc(as.numeric(df.test$class == "good"), 
+                      pred.test.rf3)
+
+
+pred.train.rf3a <- predict(rf3a, 
+                           df.train, 
+                           type = "prob")[, "good"]
+ROC.train.rf3a  <- roc(as.numeric(df.train$class == "good"), 
+                       pred.train.rf3a)
+
+
+pred.test.rf3a  <- predict(rf3a, 
+                           df.test, 
+                           type = "prob")[, "good"]
+ROC.test.rf3a   <- roc(as.numeric(df.test$class == "good"), 
+                       pred.test.rf3a)
+```
+
+```{r}
+list(
+  ROC.train.rf   = ROC.train.rf,
+  ROC.test.rf    = ROC.test.rf,
+  ROC.train.rf2  = ROC.train.rf2,
+  ROC.test.rf2   = ROC.test.rf2,
+  ROC.train.rf3  = ROC.train.rf3,
+  ROC.test.rf3   = ROC.test.rf3,
+  ROC.train.rf3a = ROC.train.rf3a,
+  ROC.test.rf3a  = ROC.test.rf3a
+) %>%
+  pROC::ggroc(alpha = 0.5, linetype = 1, size = 1) + 
+  geom_segment(aes(x = 1, xend = 0, y = 0, yend = 1), 
+               color = "grey", 
+               linetype = "dashed") +
+  labs(title = paste0("Gini TEST: ",
+                      "rf = ", 
+                      round(100 * (2 * auc(ROC.test.rf) - 1), 1), "%, ",
+                      "rf2 = ", 
+                      round(100 * (2 * auc(ROC.test.rf2) - 1), 1), "%, ",
+                      "rf3 = ", 
+                      round(100 * (2 * auc(ROC.test.rf3) - 1), 1), "%, ",
+                      "rf3a = ", 
+                      round(100 * (2 * auc(ROC.test.rf3a) - 1), 1), "% "),
+       subtitle =  paste0("Gini TRAIN: ",
+                          "rf = ", 
+                          round(100 * (2 * auc(ROC.train.rf) - 1), 1), "%, ",
+                          "rf2 = ", 
+                          round(100 * (2 * auc(ROC.train.rf2) - 1), 1), "%, ",
+                          "rf3 = ", 
+                          round(100 * (2 * auc(ROC.train.rf3) - 1), 1), "%, ",
+                          "rf3a = ", 
+                          round(100 * (2 * auc(ROC.train.rf3a) - 1), 1), "% ")) +
+  theme_bw() + coord_fixed() +
+  scale_color_brewer(palette = "Paired")
+```
+
+Finally the random forest model with grid search (rf3a) with mtry = 6, splitrule = gini and min.node.size = 50 turned out to be the best.
 
